syntax = "proto3";

option go_package = "github.com/Asuha-a/URLShortener/api/pb/user";

package user;

service Auth {
  rpc Login (LoginRequest) returns (LoginReply) {}
  rpc Signup (SignupRequest) returns (SignupReply) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginReply {
  string token = 1;
}

message SignupRequest {
  string email = 1;
  string password = 2;
}

message SignupReply {
  string token = 1;
}